--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Box</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lexend+Peta:wght@100&family=Pacifico&family=Unbounded:wght@900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lexend+Peta:wght@100&family=Pacifico&family=Unbounded:wght@900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@1,900&family=Lexend+Peta:wght@100&family=Pacifico&family=Unbounded:wght@900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300;1,900&family=Lexend+Peta:wght@100&family=Pacifico&family=Unbounded:wght@900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="first_box">
         <div class="moto">
@@ -21,9 +35,72 @@
                 About the Gamebox Diner
             </div>
             <div class="description">
-                We’re the ultimate place where quirky gamer culture meets delightful culinary virtuosity. A world where the joystick and the fork cross paths and the victory sip is just as important as the winning shot.
+                We’re the ultimate place where quirky gamer culture meets delightful culinary virtuosity. A world where
+                the joystick and the fork cross paths and the victory sip is just as important as the winning shot.
+            </div>
+        </div>
+        <div class="skull_image">
+            👾
+        </div>
+    </div>
+    <div class="third_box">
+        <div class="first_card">
+            <div class="first_image"></div>
+            <div class="one">
+                World-class Cuisine
+            </div>
+            <div class="two">
+                From fiery dragon wings to mystical elixir cocktails, our menu has something for quest seekers and
+                casual gamers alike.
+            </div>
+        </div>
+        <div class="first_card">
+            <div class="second_image"></div>
+            <div class="one">
+                Dynamic Ambience
+            </div>
+            <div class="two">
+                Get sucked into the world of pixels and potions, in an ambience crafted for an immersive gaming
+                adventure.
+            </div>
+        </div>
+    </div>
+    <div class="fourth_box">
+        <div class="forth_pad">
+            <div class="service_tile">
+                Our Signature Services
+            </div>
+            <div class="service_about">
+                Gather your clan or ride solo, at Gamebox Diner gameplay victory is paired with culinary ecstasy
+            </div>
+            <div class="stats">
+                <div class="pad">
+                    <p class="num">
+                        200
+                    </p>
+                    <p class="num2">
+                        Epic dishes
+                    </p>
+                </div>
+                <div class="pad">
+                    <p class="num">
+                        150
+                    </p>
+                    <p class="num2">
+                        legendary games
+                    </p>
+                </div>
+                <div class="pad">
+                    <p class="num">
+                        24
+                    </p>
+                    <p class="num2">
+                        Hours Open
+                    </p>
+                </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
